--- a/Portfolio/style/style.css
+++ b/Portfolio/style/style.css
@@ -2,35 +2,39 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #999;
     font-family: Arial, Helvetica, sans-serif;
 }
-body{
-    color: #962afa;
-    background-image: url(/static/modern-desktop-background-geometric-blue-design-vector/v1016-b-09.jpg);
-    background-size: 100%;
-}
+
 nav{
     display: flex;
 }
 nav img{
     margin: 1%;
-    margin-right: 50%;
-    width: 4%;
+    width: 3%;
 }
 nav a{
     text-decoration: none;
-    margin: 2%;
     transition: 0.3s ease-in-out;
     font-size: 20px;
     font-weight: bold;
+    margin:5%;
+    color: #222;
+}
+.link{
+    display:flex;
+}
+nav .link{
+    margin-left: 60%;
+    align-items: center;
 }
 nav a:hover{
-    color: #CCCCCC;
+    color: purple;
 }
 
 header{
     display: flex;
+    background-image: url(/static/modern-desktop-background-geometric-blue-design-vector/v1016-b-09.jpg);
+    background-size: 100%;
 }
 header .welcome{
     margin-top: 13%;
@@ -40,7 +44,6 @@ header .welcome{
 #welcome{
     color: #CCCCCC;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
-
 }
 span{
     color: rgb(0,0,27);
@@ -59,45 +62,40 @@ span{
 .imagePerfil:hover{
     transform:translateY(-20px)
 }
-.servico{
-    display: flex;
-    margin: 2%;
-}
-.servico h2{
-    color: rgb(0,0,27);
-    text-align: center;
-}
 
-.caixa1{
-    border:2px solid #333;
-    padding: 1%;
-    margin-right: 2%;
-    border-radius: 4px;
-    transition: 0.5s ease-in-out;
-}
-.caixa1:hover{
-    padding: 2%;
-}
-.caixa2{
-    border:2px solid #333;
-    padding: 1%;
-    margin-right: 2%;
-    border-radius: 4px;
-    transition: 0.5s ease-in-out;
-}
-.caixa2:hover{
-    padding: 2%;
-}
-.caixa3{
-    border:2px solid #333;
-    padding: 1%;
-    margin-right: 2%;
-    border-radius: 4px;
-    transition: 0.5s ease-in-out;
-}
-.caixa3:hover{
-    padding: 2%;
-}
 .icon{
     width: 10%;
+}
+
+.sectionSkill{
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.skills{
+    display: flex;
+}
+.skills div{
+    margin: 5%;
+    padding: 2%;
+    border-radius: 50%;
+    background-color: #222;
+    color: #CCCCCC;
+    font-weight: bold;
+}
+.sectionProject{
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.boxs{
+    display: flex;
+    margin: 1%;
+}
+.box{
+    margin-top: 0;
+    border-left: 4px solid purple;
+    border-top: 4px solid black;
+}
+.boxs img{
+    width: 50%;
+    height: 50%;
 }
